syntax = "proto3";

option go_package = "gihyo/catalogue/proto/book";

package book;

// `GetBookRequest`を受け取り、`GetBookResponse`を返す`Catalogue`サービスの定義
service Catalogue {
  rpc GetBook(GetBookRequest) returns (GetBookResponse) {}
}

// idを含むリクエスト`GetBookRequest`の定義
message GetBookRequest {
  int32 id = 1;
}

// `book`を含むレスポンス`GetBookResponse`の定義
message GetBookResponse {
  Book book = 1;
}

// 書籍情報`Book`の定義
message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  int32 price = 4;
}